[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/CommonUI/CommonTextureButtonSetting.tscn" type="PackedScene" id=1]
[ext_resource path="res://Script/UI/RightSettingPanel.gd" type="Script" id=2]

[node name="RightSettingPanel" type="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -49.0
margin_top = -49.0
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="colorRectDebugBG" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="commonTextureButtonSetting1" parent="." instance=ExtResource( 1 )]

[connection signal="mouse_entered" from="commonTextureButtonSetting1" to="." method="_on_commonTextureButtonSetting1_mouse_entered"]
[connection signal="mouse_exited" from="commonTextureButtonSetting1" to="." method="_on_commonTextureButtonSetting1_mouse_exited"]
[connection signal="pressed" from="commonTextureButtonSetting1" to="." method="_on_commonTextureButtonSetting1_pressed"]
